Add origin as the upstream remote for gh-pages
Deployment failed with the error message: "The current branch gh-pages
has no upstream branch".

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,4 +34,4 @@ jobs:
         mv ../book/* .
         git add .
         git commit -m "Deploy $GITHUB_SHA to gh-pages"
-        git push --force
+        git push --force --set-upstream origin gh-pages
