Support stylised blocks with mdbook-admonish
These can be used to highlight notes, tips, warnings, etc.

--- a/book.toml
+++ b/book.toml
@@ -4,3 +4,9 @@ language = "en"
 multilingual = false
 src = "src"
 title = "Git is my lab book"
+
+[preprocessor.admonish]
+command = "mdbook-admonish"
+
+[output.html]
+additional-css = ["mdbook-admonish.css"]
