Add repository links to the menu bar
This adds icons to the top-right corner of each page that link to the
book repository, and to directly edit the current page.

--- a/book.toml
+++ b/book.toml
@@ -10,3 +10,5 @@ command = "mdbook-admonish"
 
 [output.html]
 additional-css = ["mdbook-admonish.css"]
+git-repository-url = "https://github.com/robmoss/git-is-my-lab-book"
+edit-url-template = "https://github.com/robmoss/git-is-my-lab-book/edit/master/{path}"
