Collapse each section in the navigation sidebar
Only the section names are now visible by default. This makes it easier
to scan the book structure, and each section can be expanded to show the
list of chapters.

--- a/book.toml
+++ b/book.toml
@@ -12,3 +12,7 @@ command = "mdbook-admonish"
 additional-css = ["mdbook-admonish.css"]
 git-repository-url = "https://github.com/robmoss/git-is-my-lab-book"
 edit-url-template = "https://github.com/robmoss/git-is-my-lab-book/edit/master/{path}"
+
+[output.html.fold]
+enable = true
+level = 0
