Add support for tabbed code blocks
We often want to use multiple code blocks to show examples of a single
thing, but written in different programming languages. This commit adds
support to showing only one such code block at a time, and providing a
tab bar for switching between the code blocks.

Fixes #12.

--- a/book.toml
+++ b/book.toml
@@ -9,7 +9,8 @@ title = "Git is my lab book"
 command = "mdbook-admonish"
 
 [output.html]
-additional-css = ["mdbook-admonish.css"]
+additional-css = ["mdbook-admonish.css", "tabbed-code-blocks.css"]
+additional-js = ["tabbed-code-blocks.js"]
 git-repository-url = "https://github.com/robmoss/git-is-my-lab-book"
 edit-url-template = "https://github.com/robmoss/git-is-my-lab-book/edit/master/{path}"
 
