--- a/book.toml
+++ b/book.toml
@@ -7,6 +7,7 @@ title = "Git is my lab book"
 
 [preprocessor.admonish]
 command = "mdbook-admonish"
+assets_version = "1.0.0" # do not edit: managed by `mdbook-admonish install`
 
 [output.html]
 additional-css = ["mdbook-admonish.css"]
