Add online previews for pull requests
This changes how the main book is deployed, so that the gh-pages branch
is not overwritten every time the book is updated.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,7 +1,7 @@
-# As per the mdBook wiki:
-# https://github.com/rust-lang/mdBook/wiki/Automated-Deployment%3A-GitHub-Actions
+# Build the `master` branch and deploy.
 
 name: Deploy
+
 on:
   push:
     branches:
@@ -11,24 +11,20 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-      with:
-        fetch-depth: 0
-    - name: Install mdbook
-      run: |
-        make install
-        echo $(pwd)/mdbook >> $GITHUB_PATH
-    - name: Deploy GitHub Pages
-      run: |
-        mdbook build
-        git worktree add -b gh-pages gh-pages
-        git config user.name "Deploy from CI"
-        git config user.email ""
-        cd gh-pages
-        # Delete the ref to avoid keeping history.
-        git update-ref -d refs/heads/gh-pages
-        rm -rf *
-        mv ../book/html/* .
-        git add .
-        git commit -m "Deploy $GITHUB_SHA to gh-pages"
-        git push --force --set-upstream origin gh-pages
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+
+      - name: Install mdbook
+        run: |
+          make install
+          echo $(pwd)/mdbook >> $GITHUB_PATH
+
+      - name: Build the book
+        run: |
+          mdbook build
+
+      - name: Deploy GitHub Pages
+        uses: JamesIves/github-pages-deploy-action@v4
+        with:
+          folder: book/html
