Do not publish live previews for PRs from forks
We can only publish PR previews from the original repository. The action
fails when the PR originates from a forked repository. For details, see
https://github.com/rossjrw/pr-preview-action/issues/3.

--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -30,7 +30,11 @@ jobs:
         run: |
           mdbook build
 
+      # NOTE: we can only deploy PR previews from the original repository.
+      # This action fails when the PR originates from a forked repository;
+      # see https://github.com/rossjrw/pr-preview-action/issues/3 for details.
       - name: Deploy preview
+        if: github.event.pull_request.head.repo.full_name == github.repository
         uses: rossjrw/pr-preview-action@v1
         with:
           force: false
