Make the deploy workflow retain PR previews
This should retain the live PR previews when new versions of the book
are deployed. See the `pr-preview-action` documentation for details
(https://github.com/rossjrw/pr-preview-action).

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,3 +28,5 @@ jobs:
         uses: JamesIves/github-pages-deploy-action@v4
         with:
           folder: book/html
+          force: false
+          clean-exclude: pr-preview/
