--- a/book.toml
+++ b/book.toml
@@ -10,8 +10,16 @@ command = "mdbook-admonish"
 assets_version = "1.0.0" # do not edit: managed by `mdbook-admonish install`
 
 [output.html]
-additional-css = ["mdbook-admonish.css", "tabbed-code-blocks.css", "asciinema-player.css"]
-additional-js = ["tabbed-code-blocks.js", "asciinema-player.min.js"]
+additional-css = [
+    "mdbook-admonish.css",
+    "tabbed-code-blocks.css",
+    "asciinema/asciinema-player.css",
+    "asciinema/asciinema-theme-dracula.css",
+    ]
+additional-js = [
+    "tabbed-code-blocks.js",
+    "asciinema/asciinema-player.min.js",
+    ]
 git-repository-url = "https://github.com/robmoss/git-is-my-lab-book"
 edit-url-template = "https://github.com/robmoss/git-is-my-lab-book/edit/master/{path}"
 cname = "git-is-my-lab-book.net"
