--- a/book.toml
+++ b/book.toml
@@ -7,7 +7,8 @@ title = "Git is my lab book"
 
 [preprocessor.admonish]
 command = "mdbook-admonish"
-assets_version = "1.0.0" # do not edit: managed by `mdbook-admonish install`
+on_failure = "bail"
+assets_version = "2.0.0" # do not edit: managed by `mdbook-admonish install`
 
 [output.html]
 additional-css = [
