Create a project logo
The logo is an outline of the human brain, containing a simple commit
graph (similar to that in the official Git logo).

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -21,6 +21,8 @@ markdown_extensions:
 
 theme:
   name: "material"
+  favicon: "logo.png"
+  logo: "logo.svg"
   palette:
     # Palette toggle for automatic mode
     - media: "(prefers-color-scheme)"
