Add previous/next page links to the page footer

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -43,6 +43,7 @@ theme:
         name: Switch to system preference
   features:
     # Navigation settings
+    - navigation.footer
     - navigation.indexes
     - navigation.top
     - toc.follow
