--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -131,6 +131,7 @@ nav:
       - "13 June 2023": "community/meetings/2023-06-13.md"
       - "15 August 2023": "community/meetings/2023-08-15.md"
       - "18 October 2023": "community/meetings/2023-10-18.md"
+      - "19 February 2024": "community/meetings/2024-02-19.md"
   - "How to contribute": "how-to-contribute.md"
   - "Contributors": "contributors.md"
   - "References": "references.md"
