Rename References to Useful Resources
I've reorganised the sub-headings and content, and added resources from
one of our CoP meetings (2023-08-15).

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -134,4 +134,4 @@ nav:
       - "19 February 2024": "community/meetings/2024-02-19.md"
   - "How to contribute": "how-to-contribute.md"
   - "Contributors": "contributors.md"
-  - "References": "references.md"
+  - "Useful resources": "resources.md"
