Use the normal content font size for admonitions
By default, admonitions have a smaller font size than the regular page
content, and this makes them harder to read.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -138,6 +138,7 @@ theme:
 extra_css:
   - extra/asciinema-player.css
   - extra/asciinema-theme-dracula.css
+  - extra/larger-admonitions.css
 
 extra_javascript:
   - extra/asciinema-player.min.js
