Begin revising the "Building your skills" page

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -115,7 +115,7 @@ nav:
         - "Example: Square numbers": community/training/debugging/example-square-numbers.md
         - "Exercise: Perfect numbers": community/training/debugging/exercise-perfect-numbers.md
         - "Exercise: Python vs R": community/training/debugging/exercise-python-vs-r.md
-        - "Techniques and tools": community/training/debugging/techniques-and-tools.md
+        - "Building your skills": community/training/debugging/building-your-skills.md
         - "Resources": community/training/debugging/resources.md
         - "Exercise solutions": community/training/debugging/solutions.md
 
