--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,19 +12,19 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Check out
-        uses: actions/checkout@v4
+        uses: actions/checkout@v6
 
       - name: Set up Python
-        uses: actions/setup-python@v5
+        uses: actions/setup-python@v6
         with:
-          python-version: '3.10'
+          python-version: '3.13'
           cache: 'pip'
 
-      - name: Install Material for MkDocs
+      - name: Install Zensical
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
       - name: Build the book
         run: |
-          mkdocs build
+          zensical build
